--- a/package.json
+++ b/package.json
@@ -9,18 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
+    "agora-react-uikit": "^1.2.0",
+    "agora-rtc-sdk-ng": "^4.22.1",
+    "antd": "^5.21.5",
+    "chart.js": "^4.4.5",
+    "framer-motion": "^11.11.9",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.453.0",
+    "next": "14.2.15",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.14",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "react-hook-form": "^7.53.1",
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
+    "sonner": "^1.5.0",
+    "sweetalert2": "^11.14.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "typescript": "^5"
   }
 }
