--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.11.9",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.453.0",
+    "moment": "^2.30.1",
     "next": "14.2.15",
     "react": "^18",
     "react-awesome-reveal": "^4.2.14",
@@ -26,6 +27,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
     "sweetalert2": "^11.14.4"
   },
